added code for simulation

--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,1 @@
-.col-center{margin:0 auto;float:none;border-color:#add8e6;border-width:10px;border-style:solid;border-radius:5px}
+#rc_column{display:none;width:50%}.rc-column{display:none}
