--- a/css/style.less
+++ b/css/style.less
@@ -1,14 +1,19 @@
 
     
 
-.col-center{
-    margin: 0 auto;
-    float: none;
-    border-color: lightblue;
-    border-width: 10px;
-    border-style: solid;
-    border-radius: 5px;
-}
-       
+#rc_column {
 
-      
+    display: none;
+    width: 50%;
+
+
+
+}
+
+.rc-column{
+    display: none;
+}
+
+// .margin-right {
+//     margin-left: 900px;
+// }
